添加说明